# TranscodeTycoonGame

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
examples/: playground.py
tests/: test_api.py  test_game_logic.py
transcode_tycoon/: __main__.py  game_logic.py
transcode_tycoon/models/: computer.py  jobs.py  users.py
transcode_tycoon/routes/: jobs.py  upgrades.py  users.py
transcode_tycoon/utils/: auth.py
