[project]
name = "TranscodeTycoonGame"
version = "0.1.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
